apps/base/content-inbox-video/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: content-inbox-video
  labels:
    app.kubernetes.io/name: content-inbox-video
    app.kubernetes.io/part-of: content-inbox-video
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
